feat: save game release dates with comparison shortcuts
